// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<I18nProvider> children get i18n from I18nProvider 1`] = `
<UNDEFINED
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
/>
`;

exports[`<I18nProvider> children get i18n from I18nProvider 2`] = `
<I18nProvider
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
>
  <Translate(TestElement)
    testProp="required"
  >
    <Translate
      forwardedRef={null}
      testProp="required"
    >
      <TestElement
        i18n={
          Object {
            "gettext": [Function],
            "lang": "en-US",
            "ngettext": [Function],
            "npgettext": [Function],
            "pgettext": [Function],
          }
        }
        testProp="required"
      >
        <div>
          Test
        </div>
      </TestElement>
    </Translate>
  </Translate(TestElement)>
</I18nProvider>
`;

exports[`translate Component render anonymous component 1`] = `
<Translate(Component)
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
>
  <Translate
    forwardedRef={null}
    i18n={
      Object {
        "gettext": [Function],
        "lang": "en-US",
        "ngettext": [Function],
        "npgettext": [Function],
        "pgettext": [Function],
      }
    }
    testProp="required"
  >
    <Component
      i18n={
        Object {
          "gettext": [Function],
          "lang": "en-US",
          "ngettext": [Function],
          "npgettext": [Function],
          "pgettext": [Function],
        }
      }
      testProp="required"
    >
      <div>
        My
        required
      </div>
    </Component>
  </Translate>
</Translate(Component)>
`;

exports[`translate Component render translated component 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`translate Component render translated stateless component 1`] = `
<Translate(StatelessTest)
  i18n={
    Object {
      "gettext": [Function],
      "lang": "en-US",
      "ngettext": [Function],
      "npgettext": [Function],
      "pgettext": [Function],
    }
  }
  testProp="required"
>
  <Translate
    forwardedRef={null}
    i18n={
      Object {
        "gettext": [Function],
        "lang": "en-US",
        "ngettext": [Function],
        "npgettext": [Function],
        "pgettext": [Function],
      }
    }
    testProp="required"
  >
    <StatelessTest
      i18n={
        Object {
          "gettext": [Function],
          "lang": "en-US",
          "ngettext": [Function],
          "npgettext": [Function],
          "pgettext": [Function],
        }
      }
      testProp="required"
    >
      <div>
        My
        required
      </div>
    </StatelessTest>
  </Translate>
</Translate(StatelessTest)>
`;
